Moved the main navigation into the app component

--- a/client/src/app/app.component.sass
+++ b/client/src/app/app.component.sass
@@ -5,6 +5,7 @@ $secondary-color: #7D7F7F
 $font-color-dark-green: #577F6D
 $font-color-off-white: #FFFBFB
 $orangy-color: #FE5E4A
+$border-bottom-color-col: #B4CBCB
 
 header
   display: flex 
@@ -32,4 +33,10 @@ header
     flex-direction: row-reverse
     padding-right: 25px
     
-  
+nav.main-nav
+  display: flex
+  margin: 15px 0 15px 0 
+  padding: 7.5px 25px 7.5px 25px
+  border: 1px solid $border-bottom-color-col
+  border-left: none
+  border-right: none
