--- a/client/src/app/components/search/search-movies.component.sass
+++ b/client/src/app/components/search/search-movies.component.sass
@@ -58,3 +58,14 @@ $orangy-color: #FE5E4A
   .active-not-valid
     box-shadow: 0px 0px 2px 3px $orangy-color !important
     width: 325px
+
+.search-result
+  h2
+    text-transform: uppercase
+    padding: 0 25px 5px 25px
+    color: $font-color-dark-green
+    letter-spacing: 1px
+    border-bottom: 1px solid $secondary-color
+    font-size: 1.4em
+    span
+      color: $orangy-color
