--- a/client/src/app/components/details/movie-details.component.sass
+++ b/client/src/app/components/details/movie-details.component.sass
@@ -11,7 +11,13 @@ $border-bottom-color-col: #B4CBCB
   margin: 10px 25px 10px 25px
 
 .detailed-movie-info
-  .row
+  .row2
+    h2
+      padding: 0 5px 0 5px
+      border-bottom: 1px solid $secondary-color
+      letter-spacing: 1px
+
+  .row1
     display: flex
     position: relative
     border-radius: 5px
