Added a back button to go back to previous page as well as added and styled missing pieces of the component

--- a/client/src/app/components/details/movie-details.component.sass
+++ b/client/src/app/components/details/movie-details.component.sass
@@ -11,12 +11,19 @@ $border-bottom-color-col: #B4CBCB
   margin: 10px 25px 10px 25px
 
 .detailed-movie-info
+  .fa-chevron-circle-left
+    font-size: 3em
+    color: $orange-color
+    display: block
+    margin: 15px 25px 15px 25px
+    &:hover
+      cursor: pointer
+
   .row2
     h2
       padding: 0 5px 0 5px
       border-bottom: 1px solid $secondary-color
       letter-spacing: 1px
-
   .row1
     display: flex
     position: relative
