--- a/client/src/app/components/details/movie-details.component.html
+++ b/client/src/app/components/details/movie-details.component.html
@@ -1,4 +1,5 @@
 <div class="detailed-movie-info">
+  <i class="fa fa-chevron-circle-left" aria-hidden="true" (click)="goBack()"></i>
   <div class="row row1" [style.background-image]="'url(' + movie?.backdrop_path + ')'">
     <span class="bgk"></span>
     <div class="col col-left">
