--- a/client/src/app/components/details/movie-details.component.sass
+++ b/client/src/app/components/details/movie-details.component.sass
@@ -90,6 +90,13 @@ $border-bottom-color-col: #B4CBCB
         letter-spacing: 2px
         font-weight: 100
         line-height: 27.5px
+      .liked-buttons
+        text-align: right
+        i
+          font-size: 2em
+          color: $orange-color
+          &:hover
+            cursor: pointer
     .col-right
       flex-basis: 35%
       .poster
