--- a/client/src/app/components/recommended/recommended-movies.component.sass
+++ b/client/src/app/components/recommended/recommended-movies.component.sass
@@ -12,3 +12,13 @@ h1
   font-size: 1.5em
   color: $dark-green-color
   border-bottom: 1px solid $orange-color
+
+.no-movies
+  color: $dark-green-color
+  margin: 25px 15px 25px 15px
+  font-size: 1.85em
+  letter-spacing: 1.2px
+  text-align: center
+  padding: 30px
+  i 
+    color: $orange-color
