Added the error component to be shown if something goes wrong

--- a/client/src/app/components/discover/styles.sass
+++ b/client/src/app/components/discover/styles.sass
@@ -1,7 +1,7 @@
 $font-color-dark-green: #577F6D
 $secondary-color: #7D7F7F
 
-div
+div.container
   display: flex
   margin: 15px 0 15px 0
   justify-content: space-around
