--- a/client/src/app/components/discover/layout.html
+++ b/client/src/app/components/discover/layout.html
@@ -1,14 +1,18 @@
-<div>
-  <button 
-    (click)="prevPage()"
-    [disabled]="!pagination.hasPrev()">
-    <i class="fa fa-angle-left" aria-hidden="true"></i> Previous
-  </button>
-  <button 
-    (click)="nextPage()"
-    [disabled]="!pagination.hasNext()">
-    Next <i class="fa fa-angle-right" aria-hidden="true"></i>
-  </button>
+<div *ngIf="!error">
+  <div class="container">
+    <button 
+      (click)="prevPage()"
+      [disabled]="!pagination.hasPrev()">
+      <i class="fa fa-angle-left" aria-hidden="true"></i> Previous
+    </button>
+    <button 
+      (click)="nextPage()"
+      [disabled]="!pagination.hasNext()">
+      Next <i class="fa fa-angle-right" aria-hidden="true"></i>
+    </button>
+  </div>
+
+  <movie-list [movies]="movies"></movie-list>
 </div>
 
-<movie-list [movies]="movies"></movie-list>
+<error *ngIf="error"></error>
